# chatbot-platform

./: .dockerignore  .env.example  .gitignore  README.md  bug_report.py  docker-compose.yaml  gateway.Dockerfile  gateway.py  inference-worker.py  inference_worker.Dockerfile  main.py  pyproject.toml  streamlit.Dockerfile  streamlit_demo.py  telemetry.py
src/gateway/: main.py
src/inference_worker/: main.py
src/settings/: __init__.py  settings.py
src/streamlit_ui/: ui.py
src/telemetry/: __init__.py
