[project]
name = "chatbot-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=13.3.0",
    "fastapi>=0.129.0",
    "faststream[cli,confluent]>=0.6.6",
    "kafka>=1.3.5",
    "kafka-python>=2.3.0",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-kafka-python>=0.60b1",
    "opentelemetry-sdk>=1.39.1",
    "redis>=7.2.0",
    "streamlit>=1.54.0",
    "uvicorn>=0.41.0",
]
