[project]
name = "chatbot-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # "fastapi>=0.129.0",
    # "faststream[cli,confluent,kafka,otel]>=0.6.6",
    # "kafka>=1.3.5",
    # "kafka-python-ng>=2.2.3",
    # "opentelemetry-api>=1.39.1",
    # "opentelemetry-exporter-otlp>=1.39.1",
    # "opentelemetry-instrumentation-fastapi>=0.60b1",
    # "opentelemetry-instrumentation-kafka-python>=0.60b1",
    # "opentelemetry-sdk>=1.39.1",
    # "pydantic>=2.12.5",
    # "pydantic-settings>=2.13.0",
    # "redis>=7.2.0",
    # "streamlit>=1.54.0",

]

[dependency-groups]
faststream = [
    "faststream[cli,confluent,kafka,otel]>=0.6.6",
]

backend = [
    "uvicorn>=0.41.0",
    "fastapi>=0.129.0",
]

kafka = [
    "kafka-python-ng>=2.2.3",
]

otel = [
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-kafka-python>=0.60b1",
]

shared = [
    {include-group = "otel"},
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
]


gateway = [
    {include-group = "faststream"},
    {include-group = "backend"},
    {include-group = "kafka"},
    {include-group = "shared"},
    "redis>=7.2.0",
]

inference_worker = [
    {include-group = "faststream"},
    {include-group = "kafka"},
    {include-group = "shared"},
    "redis>=7.2.0",
]

streamlit = [
    {include-group = "shared"},
    "streamlit>=1.54.0",
]

[tool.ruff]
line-length = 120
extend-exclude = ['scripts']

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = [
    'E', 'I', 'F', 'W', 'C90', 'N', 'UP', 'YTT', 'S', 'BLE'
    , 'B', 'C4', 'DTZ', 'DJ', 'FA', 'ISC', 'ICN', 'G', 'PIE'
    , 'T20', 'PYI', 'PT', 'Q', 'RSE', 'RET', 'SIM', 'TID'
    , 'TCH', 'INT', 'PTH', 'TD', 'ERA', 'PL'
]
ignore = ['E501', ]

[tool.ruff.lint.per-file-ignores]
"**/tests/**.py" = ['S101']

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff.lint.isort]
known-third-party = [
    'celery', 'django', 'django_filters', 'drf_spectacular', 'environs', 'pytest',
    'requests', 'rest_framework', 'rest_framework_filters', 'sentry_sdk'
]